* update maven-surefire-plugin version, also updated some properties into environment for execution. * enabled the axis2-war testing module, now only security part test and two other tests were exclude.
git-svn-id: https://svn.apache.org/repos/asf/ode/trunk@981510 13f79535-47bb-0310-9956-ffa450edef68