@@ -40,6 +40,7 @@
        <geronimo-spec-jms.version>1.1-rc4</geronimo-spec-jms.version>
        <jetty.version>6.1.3</jetty.version>
        <testng.version>5.8</testng.version>
+       <axis2.tcp.version>1.0.0</axis2.tcp.version>
     </properties>
 
     <dependencies>
@@ -139,6 +140,11 @@
             <version>${axis2.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.axis2</groupId>
+            <artifactId>axis2-transport-tcp</artifactId>
+            <version>${axis2.tcp.version}</version>
+        </dependency>        
+        <dependency>
             <groupId>xerces</groupId>
             <artifactId>xercesImpl</artifactId>
         </dependency>
@@ -188,7 +194,6 @@
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
         </dependency>
-        <!--
         <dependency>
             <groupId>org.apache.rampart</groupId>
             <artifactId>rampart</artifactId>
@@ -200,26 +205,13 @@
             <artifactId>rahas</artifactId>
             <type>mar</type>
             <version>${rampart.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.axis2</groupId>
-            <artifactId>addressing</artifactId>
-            <type>mar</type>
-            <version>${rampart.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.axis2</groupId>
-            <artifactId>mex</artifactId>
-            <type>mar</type>
-            <version>${mex.version}</version>
-        </dependency>
-        -->
-        <dependency>
+        </dependency>        
+        <!-- dependency>
             <groupId>org.apache.axis2</groupId>
             <artifactId>mex</artifactId>
             <classifier>impl</classifier>
             <version>${mex.version}</version>
-        </dependency>
+        </dependency-->
         <dependency>
           <groupId>org.testng</groupId>
           <artifactId>testng</artifactId>
@@ -245,6 +237,33 @@
           <version>${jetty.version}</version>
           <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>com.h2database</groupId>
+          <artifactId>h2</artifactId>
+        </dependency>
+	    <dependency>
+	      <groupId>org.hibernate</groupId>
+	      <artifactId>hibernate</artifactId>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>cglib</groupId>
+	      <artifactId>cglib</artifactId>
+	      <version>2.1_3</version>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>asm</groupId>
+	      <artifactId>asm</artifactId>
+	      <version>1.5.3</version>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>asm</groupId>
+	      <artifactId>asm-attrs</artifactId>
+	      <version>1.5.3</version>
+	      <scope>test</scope>
+	    </dependency>        
     </dependencies>
 
 
@@ -345,6 +364,13 @@
 
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+	                <systemPropertyVariables>
+	                	<log4j.configuration>test-log4j.properties</log4j.configuration>
+	                	<org.apache.ode.scheduler.deleteJobsOnStart>true</org.apache.ode.scheduler.deleteJobsOnStart>
+	                	<org.apache.ode.autoRetireProcess>true</org.apache.ode.autoRetireProcess>
+	                </systemPropertyVariables>
+                </configuration>
                 <executions>
                     <execution>
                         <id>test-axis2-web</id>
@@ -353,11 +379,20 @@
                             <goal>test</goal>
                         </goals>
                         <configuration>
-                            <forkMode>always</forkMode>
-                            <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                            <argLine>-Xms512M -Xmx1024M -XX:MaxPermSize=512M</argLine>
+                        	<forkMode>perTest</forkMode>
                             <additionalClasspathElements>
                                 <additionalClasspathElement>${project.build.directory}</additionalClasspathElement>
                             </additionalClasspathElements>
+                            <excludes>
+                               <exclude>**/management/DeploymentTest.java</exclude>
+                               <exclude>**/management/InstanceManagementTest.java</exclude>
+                               <exclude>**/rampart/basic/*Test.java</exclude>
+                               <exclude>**/rampart/policy/*Test.java</exclude>
+                            </excludes>
+							<includes>
+								<include>**/*Test.java</include>
+							</includes>
                         </configuration>
                     </execution>
                 </executions>
